<resources>
    <string name="app_name">Sample</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO:別のファイルに切り出してignoreする -->
    <string name="google_sign_in_server_client_id">428221645610-lo7slbsvpnoi8ho775uhl5ud9jcb3tn8.apps.googleusercontent.com</string>


    <!-- 旅行作成画面 -->
    <string name="new_trip_input_title">タイトル</string>
    <string name="new_trip_input_notes">説明</string>
    <string name="new_trip_input_start_date">開始日</string>
    <string name="new_trip_input_end_date">終了日</string>
    <string name="new_trip_hint_title">e.g.北陸旅行</string>
    <string name="new_trip_hint_note">e.g.車で黒部ダム〜飛騨高山〜白川郷〜金沢を巡る旅</string>
    <string name="new_trip_submit_button">作成する</string>


    <!-- バリデーション -->
    <string name="validation_required">必須入力です</string>
    <string name="validation_mail">形式が不正です</string>
    <string name="validation_password">半角英数字6~10文字で入力してください</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
